--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/userservicetestfinalapplication
-spring.datasource.username=springuser
+spring.datasource.url=jdbc:mysql://localhost:3306/userServiceDB
+spring.datasource.username=springUser
 spring.datasource.password=ThePassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 server.port=9000
+spring.flyway.baseline-on-migrate = true
 logging.level.org.springframework.security=trace
