--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,11 @@
             <artifactId>spring-security-cas</artifactId>
             <version>6.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>1.3</version>
+        </dependency>
     </dependencies>
 
     <build>
