--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.datasource.password=ThePassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 server.port=9000
-spring.flyway.baseline-on-migrate = true
+spring.flyway.baseline-on-migrate = false
 logging.level.org.springframework.security=trace
